# study-notes

./: .clang-format  .clang-tidy  .clangd  .gitignore  .markdownlint.json  README.md
cppreference/: README.md  adl.cpp
cppreference/01.Language/: 03.Preprocessor.md  05.Declarations.md  06 Initialization.md  12. Miscellaneous.md  13. Idioms.md
cppreference/03. Language/: CPO.md  adl.md  lambda.md
cppreference/13. General utilities library/: Function objects.md  _index.md  any.md  apply.md  bit.md  bitset.md  expected.md  make_from_tuple.md  optional.md  std::tuple.md  variant.md
cppreference/13. General utilities library/function/: bind.md  function.md
cppreference/14. Containers library/: _index.md  array.md  deque.md  forward_list.md  vector.md
cppreference/15. Iterators library/: _index.md
cppreference/16. Ranges library (C++20)/: _index.md
cppreference/17. Algorithms library/: _index.md
cppreference/18. Strings library/: _index.md
cppreference/C++ Library/: General utilities.md  Language support.md  Memory management.md  Metaprogramming.md
cppreference/C++ Library/old/: std::align_val_t.md  std::destroying_delete.md  std::get_new_handler.md  std::nothrow.md
cppreference/tests/: CMakeLists.txt  CMakePresets.json  algorithm.cpp  any.cpp  apply.cpp  array.cpp  bind.cpp  bit.cpp  bitset.cpp  container_adaptors.cpp  expected.cpp  forward_list.cpp  function.cpp  iterator_concepts.cpp  iterators.cpp  lambda.cpp  make_from_tuple.cpp  optional.cpp  pair.cpp  ranges.cpp  tuple.cpp  unordered_associative_containers.cpp  variant.cpp  vcpkg.json  vector.cpp
(+22 files in other folders)
